<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.com.aiton.taui.BasetimeWeekActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="时基编号"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_week_basetime_id" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="时段编号"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_week_schedule" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/light_blue"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:textSize="30dp"
            android:layout_height="wrap_content"
            android:text="日期"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:id="@+id/cbxMonday"
                android:layout_weight="1"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:layout_weight="1"
                android:id="@+id/cbxTuesday"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:layout_weight="1"
                android:id="@+id/Wednesday" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:layout_weight="1"
                android:id="@+id/cbxThursday"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:layout_weight="1"
                android:id="@+id/cbxFriday"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:layout_weight="1"
                android:id="@+id/cbxSaturday" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:layout_weight="1"
                android:id="@+id/cbxSunday" />

            <CheckBox
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:layout_weight="1"
                android:id="@+id/cbxAll" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <Button
            android:visibility="visible"
            android:onClick="btWeekRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendtotsc"
            android:layout_weight="1"
            android:id="@+id/btnRead"/>
        <Button
            android:onClick="btWeekSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="1"
            android:id="@+id/btnSubmit"/>
        </LinearLayout>


</LinearLayout>
